# homebot

./: .gitignore  Cargo.toml  Containerfile.armv6  Containerfile.armv7  README.md
.github/workflows/: build.yaml  build_armv6.yaml  build_armv7.yaml
config/: application.yaml
container/: Containerfile  Containerfile.armv6
container/arm/: Containerfile  cargo.config
src/: ad_protection.rs  command.rs  configuration.rs  main.rs  pihole.rs
